--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="dark_gray">#505050</color>
+    <color name="light_gray">#A0A0A0</color>
+    <color name="gray">#808080</color>
 </resources>
