--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
             android:text="暫留" android:textSize="16sp" android:textColor="@color/black" />
 
         <Spinner
+            android:id="@+id/displayModeSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -75,5 +76,10 @@
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
         android:src="@drawable/e1_1f" />
+
+    <com.example.wifiindoorpositioning.ContentDebugView
+        android:id="@+id/contentView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
