--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/orientation"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1.2"
             android:text="方位" android:textSize="16sp" android:textColor="@color/black" />
@@ -30,7 +30,7 @@
         <com.example.wifiindoorpositioning.HighlightButton
             android:id="@+id/btScan"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1.2"
             android:background="@drawable/background_rectangle_transparent_unfocus"
             app:backgroundTint="@null"
@@ -39,33 +39,19 @@
         <TextView
             android:id="@+id/txtStatus"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1.2"
             android:gravity="center"
             android:text="掃描結果" android:textSize="16sp" android:textColor="@color/black" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
+        <com.example.wifiindoorpositioning.HighlightButton
+            android:id="@+id/btSettings"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:text="暫留" android:textSize="16sp" android:textColor="@color/black" />
-
-        <Spinner
-            android:id="@+id/displayModeSpinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:entries="@array/displayMode"
-            android:textSize="30sp" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.8"
+            android:background="@drawable/background_rectangle_transparent_unfocus"
+            app:backgroundTint="@null"
+            android:text="設定" android:textSize="16sp" android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -76,6 +62,87 @@
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
         android:src="@drawable/e1_1f" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" >
+
+        <TextView
+            android:id="@+id/txtDistance"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:text="暫留" android:textSize="16sp" android:textColor="@color/black" />
+
+        <Spinner
+            android:id="@+id/debugModeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:entries="@array/displayMode"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/inputAcceptDifference"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:inputType="numberDecimal"
+            android:layout_weight="1"
+            android:hint="0.4" android:textSize="16sp" android:textColor="@color/black" />
+
+        <Spinner
+            android:id="@+id/apValueModeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1.5"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" >
+
+        <Spinner
+            android:id="@+id/highlightModeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="30sp" />
+
+        <Spinner
+            android:id="@+id/displayModeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="30sp" />
+
+        <Spinner
+            android:id="@+id/weightModeSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
     <com.example.wifiindoorpositioning.ContentDebugView
         android:id="@+id/contentView"
