--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,15 +116,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
-        android:paddingBottom="5dp" >
+        android:paddingBottom="5dp"
+        android:background="@drawable/background_stroke_bottom" >
 
         <Spinner
             android:id="@+id/highlightModeSpinner"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1"
-            android:textSize="30sp" />
+            android:layout_weight="1.2"
+            android:textSize="16sp" />
 
         <Spinner
             android:id="@+id/displayModeSpinner"
@@ -132,7 +133,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1"
-            android:textSize="30sp" />
+            android:textSize="16sp" />
 
         <Spinner
             android:id="@+id/weightModeSpinner"
@@ -140,7 +141,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:textSize="30sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
