--- a/app/src/main/res/layout/window_settingsview.xml
+++ b/app/src/main/res/layout/window_settingsview.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1"
-            android:text="參考點顯示大小： "/>
+            android:text="參考點大小： "/>
 
         <EditText
             android:id="@+id/inputReferencePointRadius"
@@ -40,11 +40,52 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/pointView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/referencePointView" >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1.5"
+            android:text="預測點大小： "/>
+
+        <EditText
+            android:id="@+id/inputPredictPointRadius"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:inputType="number"
+            android:layout_weight="1"
+            android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1.5"
+            android:text="實際點大小： "/>
+
+        <EditText
+            android:id="@+id/inputActualPointRadius"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:inputType="number"
+            android:layout_weight="1"
+            android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/testPointView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/referencePointView"
+        android:layout_below="@id/pointView"
         android:paddingTop="5dp"
         android:paddingBottom="5dp" >
 
@@ -60,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:text="測試點座標" android:textSize="16sp" />
 
     </LinearLayout>
@@ -95,17 +136,32 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/bodyK" >
 
-        <com.example.wifiindoorpositioning.FunctionView
-            android:id="@+id/highlightFunctionView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
         <com.example.wifiindoorpositioning.FunctionView
-            android:id="@+id/weightFunctionView"
+            android:id="@+id/apValueView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1.2"
+            android:background="@drawable/background_stroke_right" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <com.example.wifiindoorpositioning.FunctionView
+                android:id="@+id/highlightFunctionView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_stroke_bottom" />
+
+            <com.example.wifiindoorpositioning.FunctionView
+                android:id="@+id/weightFunctionView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
