--- a/app/src/main/res/layout/window_settingsview.xml
+++ b/app/src/main/res/layout/window_settingsview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,168 +8,171 @@
     android:background="@color/white"
     tools:ignore="HardcodedText">
 
-    <LinearLayout
-        android:id="@+id/referencePointView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:text="參考點大小： "/>
-
-        <EditText
-            android:id="@+id/inputReferencePointRadius"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:inputType="number"
-            android:layout_weight="1"
-            android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
-
-        <CheckBox
-            android:id="@+id/displayReferencePoint"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:text="顯示參考點" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/pointView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/referencePointView" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1.5"
-            android:text="預測點大小： "/>
-
-        <EditText
-            android:id="@+id/inputPredictPointRadius"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:inputType="number"
-            android:layout_weight="1"
-            android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
-
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1.5"
-            android:text="實際點大小： "/>
-
-        <EditText
-            android:id="@+id/inputActualPointRadius"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:inputType="number"
-            android:layout_weight="1"
-            android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/testPointView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/pointView"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp" >
-
-        <Spinner
-            android:id="@+id/testPointSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/txtTestPointCoordinate"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1.5"
-            android:text="測試點座標" android:textSize="16sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/bodyK"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/testPointView" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:text="k： " android:textSize="16sp" android:textColor="@color/black" />
-
-        <EditText
-            android:id="@+id/inputK"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:inputType="number"
-            android:layout_weight="1"
-            android:hint="4" android:textSize="16sp" android:textColor="@color/black" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/bodyK" >
-
-
-        <com.example.wifiindoorpositioning.FunctionView
-            android:id="@+id/apValueView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2"
-            android:background="@drawable/background_stroke_right" />
+        android:layout_height="0dp"
+        android:layout_weight="0.9" >
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <com.example.wifiindoorpositioning.FunctionView
-                android:id="@+id/highlightFunctionView"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="參考點大小： "/>
+
+                <EditText
+                    android:id="@+id/inputReferencePointRadius"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:layout_weight="1"
+                    android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
+
+                <CheckBox
+                    android:id="@+id/displayReferencePoint"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="顯示參考點" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1.5"
+                    android:text="預測點大小： "/>
+
+                <EditText
+                    android:id="@+id/inputPredictPointRadius"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:layout_weight="1"
+                    android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1.5"
+                    android:text="實際點大小： "/>
+
+                <EditText
+                    android:id="@+id/inputActualPointRadius"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:layout_weight="1"
+                    android:hint="10" android:textSize="16sp" android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_stroke_bottom" />
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp" >
 
-            <com.example.wifiindoorpositioning.FunctionView
-                android:id="@+id/weightFunctionView"
+                <Spinner
+                    android:id="@+id/testPointSpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtTestPointCoordinate"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1.5"
+                    android:text="測試點座標" android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="k： " android:textSize="16sp" android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/inputK"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:layout_weight="1"
+                    android:hint="4" android:textSize="16sp" android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <com.example.wifiindoorpositioning.FunctionView
+                    android:id="@+id/apValueView"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.2"
+                    android:background="@drawable/background_stroke_right" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical" >
+
+                    <com.example.wifiindoorpositioning.FunctionView
+                        android:id="@+id/highlightFunctionView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_stroke_bottom" />
+
+                    <com.example.wifiindoorpositioning.FunctionView
+                        android:id="@+id/weightFunctionView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
+        android:id="@+id/buttonControlPanel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true" >
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal" >
 
         <com.example.wifiindoorpositioning.HighlightButton
             android:id="@+id/btConfirm"
@@ -191,4 +194,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
