--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/e1_1f" />
+        android:src="@drawable/e1" />
 
     <LinearLayout
         android:layout_width="match_parent"
