--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/e1" />
+        android:src="@drawable/e1_1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -119,11 +119,18 @@
         android:background="@drawable/background_stroke_bottom" >
 
         <Spinner
+            android:id="@+id/resultHistoriesSpinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="16sp" />
+
+        <Spinner
             android:id="@+id/displayModeSpinner"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:textSize="16sp" />
 
         <Spinner
