--- a/app/src/main/res/layout/window_contentdisplayview.xml
+++ b/app/src/main/res/layout/window_contentdisplayview.xml
@@ -14,6 +14,29 @@
         android:paddingBottom="20dp"
         android:layout_marginBottom="10dp">
 
+        <LinearLayout
+            android:id="@+id/wifiResultControlPanel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <Spinner
+                android:id="@+id/referencePointSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/txtReferencePoint"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:gravity="center"
+                android:text="測試點" android:textSize="16sp" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/apDistanceInfoControlPanel"
