--- a/app/src/main/res/layout/window_settingsview.xml
+++ b/app/src/main/res/layout/window_settingsview.xml
@@ -14,6 +14,7 @@
         android:layout_weight="0.9" >
 
         <LinearLayout
+            android:id="@+id/settingsRootView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
@@ -44,7 +45,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:text="顯示參考點" />
+                    android:text="除錯模式" />
 
             </LinearLayout>
 
